[workspace]
resolver = "2"
members = [
  "kon_players",
  "kon_portal",
  "kon_rs",
  ]

  [workspace.dependencies]
  reqwest = { version = "0.11", features = ["json"] }
  tokio = { version = "1", features = ["full"] }
  bitflags = "2.3.3"
serde = { version  = "1.0", features = ["derive"] }
serde_json = { version  = "1.0" }
