[workspace]
resolver = "2"
members = [
    "kon_analyzer",
    "kon_players",
    "kon_portal",
    "kon_rs",
    "kon_scheduler",
]

[workspace.dependencies]
clap = { version = "4.4.13", features = ["derive"] }
csv = "*"
scraper = { version = "0.18.1" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bitflags = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.6.1", features = ["v4", "js"] }
itertools = "0.12.0"
futures = "0.3"
num = "0.4"
regex = "*"
