[package]
name = "kon_portal"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "*"
eframe = { version = "0.22.0", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence"] }

kon-rs = { path = "../kon_rs" }
kon_players = { path = "../kon_players" }

tokio = { workspace = true }
