[package]
name = "kon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = { workspace = true }
reqwest = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
num = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true}

[dev-dependencies]
tokio = { workspace = true}
