[package]
name = "kon_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kon-rs = { path = "../kon_rs" }
csv = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
indicatif = "0.17.0"
